2010-03-23 Borut Razem <borut.razem AT siol.net>

	* device/include/*.h, device/include/asm/z80/features.h,
	  device/include/asm/default/features.h, device/include/z80/*.h,
	  device/lib/z80/*.s: sdcc library license changed to GPL+LE

2010-03-20 Borut Razem <borut.razem AT siol.net>

	* main_in.mk, configure, debugger/mcs51/configure,
	  debugger/mcs51/Makefile.in, debugger/mcs51/configure.in,
	  configure.in, src/Makefile.in, src/port.mk, sim/ucsim/configure,
	  sim/ucsim/cmd.src/Makefile.in, , sim/ucsim/xa.src/Makefile.in,
	  sim/ucsim/z80.src/Makefile.in, sim/ucsim/gui.src/Makefile.in,
	  sim/ucsim/gui.src/serio.src/Makefile.in,
	  sim/ucsim/gui.src/obsolete/portmon.src/Makefile.in,
	  sim/ucsim/sim.src/Makefile.in, sim/ucsim/main_in.mk,
	  sim/ucsim/configure.in, sim/ucsim/hc08.src/Makefile.in:
	  introduced MAKEDEP

2010-03-20 Borut Razem <borut.razem AT siol.net>

	* configure.in, configure, support/regression/tests/bitfields.c,
	  support/regression/tests/bug-1981238.c,
	  support/regression/tests/preproc.c,
	  support/regression/tests/strtok.c,
	  support/regression/tests/structflexarray.c,
	  support/regression/tests/malloc.c:
	  regression test fixed for SunPro C compiler
	* support/regression/ports/host/spec.mk:
	  adapted for SunPro C compiler & renamed to spec.mk.in
	* support/regression/Makefile.in:
	  include ./ports/$(PORT)/spec.mk if exists
	* device/lib/Makefile.in:
	  Solaris make (GNU Make 3.81) doesn't like $$() syntax;
	  converted to ``

2010-03-19 Borut Razem <borut.razem AT siol.net>

	* configure.in, configure, device/lib/z80/Makefile.in,
	  device/lib/gbz80/Makefile.in, device/lib/ds390/Makefile.in,
	  device/lib/Makefile.in, device/lib/ds400/Makefile.in,
	  device/lib/mcs51/Makefile.in, device/lib/hc08/Makefile.in:
	  autoconf test if ar accepts -S (GNU ar does, BSD ar does not)
	* src/pic/ralloc.c: Solaris SunPro C compiler doesn't like (void)0

2010-03-18 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/ddconfig_in.h: